--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			    <input class="mdl-textfield__input" type="password" id="pass">
 			    <label class="mdl-textfield__label" for="pass">Password</label>
 			</div>
-			<button id="SingIn" class="mdl-button mdl-js-button mdl-js-ripple-effect" style="color: #3F51B5; float:right;">
-				Sign in <i class="zmdi zmdi-mail-send"></i>
+			<a href="home.html"><button id="SingIn" class="mdl-button mdl-js-button mdl-js-ripple-effect" style="color: #3F51B5; float:right;">
+				Sign in <i class="zmdi zmdi-mail-send"></i></a>
 			</button>
 		</form>
 	</div>
