--- a/products.html
+++ b/products.html
@@ -22,18 +22,19 @@
 </head>
 <body>
 	<!-- Notifications area -->
+	<!-- Notifications area -->
 	<section class="full-width container-notifications">
 		<div class="full-width container-notifications-bg btn-Notification"></div>
 	    <section class="NotificationArea">
-	        <div class="full-width text-center NotificationArea-title tittles">Notifications <i class="zmdi zmdi-close btn-Notification"></i></div>
+	        <div class="full-width text-center NotificationArea-title tittles">Notificaciones <i class="zmdi zmdi-close btn-Notification"></i></div>
 	        <a href="#" class="Notification" id="notifation-unread-1">
 	            <div class="Notification-icon"><i class="zmdi zmdi-accounts-alt bg-info"></i></div>
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle"></i>
-	                    <strong>New User Registration</strong> 
+	                    <strong>Registrar un nuevo usuario</strong> 
 	                    <br>
-	                    <small>Just Now</small>
+	                    <small>Ahora mismo</small>
 	                </p>
 	            </div>
 	        	<div class="mdl-tooltip mdl-tooltip--left" for="notifation-unread-1">Notification as UnRead</div> 
@@ -43,9 +44,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>New Updates</strong> 
+	                    <strong>Historial</strong> 
 	                    <br>
-	                    <small>30 Mins Ago</small>
+	                    <small>ultimo mes</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-1">Notification as Read</div>
@@ -55,9 +56,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle"></i>
-	                    <strong>Archive uploaded</strong> 
+	                    <strong>Nuevo inventario agregado</strong> 
 	                    <br>
-	                    <small>31 Mins Ago</small>
+	                    <small>ultima semana</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-unread-2">Notification as UnRead</div>
@@ -67,9 +68,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>New Mail</strong> 
+	                    <strong>Solicitud nueva</strong> 
 	                    <br>
-	                    <small>37 Mins Ago</small>
+	                    <small>hace 37 min</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-2">Notification as Read</div>
@@ -79,9 +80,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>Folder delete</strong> 
+	                    <strong>Se elimino contenido</strong> 
 	                    <br>
-	                    <small>1 hours Ago</small>
+	                    <small>hace 2 días</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-3">Notification as Read</div>
@@ -98,13 +99,13 @@
 					<li class="btn-Notification" id="notifications">
 						<i class="zmdi zmdi-notifications"></i>
 						<!-- <i class="zmdi zmdi-notifications-active btn-Notification" id="notifications"></i> -->
-						<div class="mdl-tooltip" for="notifications">Notifications</div>
+						<div class="mdl-tooltip" for="notifications">Notificaciones</div>
 					</li>
 					<li class="btn-exit" id="btn-exit">
 						<i class="zmdi zmdi-power"></i>
-						<div class="mdl-tooltip" for="btn-exit">LogOut</div>
+						<div class="mdl-tooltip" for="btn-exit">Cerrar sesión</div>
 					</li>
-					<li class="text-condensedLight noLink" ><small>User Name</small></li>
+					<li class="text-condensedLight noLink" ><small>Usuario</small></li>
 					<li class="noLink">
 						<figure>
 							<img src="assets/img/avatar-male.png" alt="Avatar" class="img-responsive">
@@ -119,7 +120,7 @@
 		<div class="full-width navLateral-bg btn-menu"></div>
 		<div class="full-width navLateral-body">
 			<div class="full-width navLateral-body-logo text-center tittles">
-				<i class="zmdi zmdi-close btn-menu"></i> Inventory 
+				<i class="zmdi zmdi-close btn-menu"></i>  Wine for us
 			</div>
 			<figure class="full-width" style="height: 77px;">
 				<div class="navLateral-body-cl">
@@ -127,13 +128,13 @@
 				</div>
 				<figcaption class="navLateral-body-cr hide-on-tablet">
 					<span>
-						Full Name Admin<br>
+						Administrador<br>
 						<small>Admin</small>
 					</span>
 				</figcaption>
 			</figure>
 			<div class="full-width tittles navLateral-body-tittle-menu">
-				<i class="zmdi zmdi-desktop-mac"></i><span class="hide-on-tablet">&nbsp; DASHBOARD</span>
+				<i class="zmdi zmdi-desktop-mac"></i><span class="hide-on-tablet">&nbsp; BIENVENIDO</span>
 			</div>
 			<nav class="full-width">
 				<ul class="full-width list-unstyle menu-principal">
@@ -154,7 +155,7 @@
 								<i class="zmdi zmdi-case"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								ADMINISTRATION
+								ADMINISTRACION
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -165,7 +166,7 @@
 										<i class="zmdi zmdi-balance"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										COMPANY
+										COMPAÑIA
 									</div>
 								</a>
 							</li>
@@ -175,7 +176,7 @@
 										<i class="zmdi zmdi-truck"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										PROVIDERS
+										PROVEEDORES
 									</div>
 								</a>
 							</li>
@@ -185,7 +186,7 @@
 										<i class="zmdi zmdi-card"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										PAYMENTS
+										PAGOS REALIZADOS
 									</div>
 								</a>
 							</li>
@@ -195,7 +196,7 @@
 										<i class="zmdi zmdi-label"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										CATEGORIES
+										CATEGORIAS
 									</div>
 								</a>
 							</li>
@@ -208,7 +209,7 @@
 								<i class="zmdi zmdi-face"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								USERS
+								USUARIOS
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -219,7 +220,7 @@
 										<i class="zmdi zmdi-account"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										ADMINISTRATORS
+										ADMINISTRADOR
 									</div>
 								</a>
 							</li>
@@ -229,7 +230,7 @@
 										<i class="zmdi zmdi-accounts"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										CLIENT
+										ENCARGADO
 									</div>
 								</a>
 							</li>
@@ -242,7 +243,7 @@
 								<i class="zmdi zmdi-washing-machine"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								PRODUCTS
+								PRODUCTOS
 							</div>
 						</a>
 					</li>
@@ -253,7 +254,7 @@
 								<i class="zmdi zmdi-shopping-cart"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								SALES
+								VENTAS REALIZADAS
 							</div>
 						</a>
 					</li>
@@ -264,44 +265,11 @@
 								<i class="zmdi zmdi-store"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								INVENTORY
+								INVENTARIO
 							</div>
 						</a>
 					</li>
-					<li class="full-width divider-menu-h"></li>
-					<li class="full-width">
-						<a href="#!" class="full-width btn-subMenu">
-							<div class="navLateral-body-cl">
-								<i class="zmdi zmdi-wrench"></i>
-							</div>
-							<div class="navLateral-body-cr hide-on-tablet">
-								SETTINGS
-							</div>
-							<span class="zmdi zmdi-chevron-left"></span>
-						</a>
-						<ul class="full-width menu-principal sub-menu-options">
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr hide-on-tablet">
-										OPTION
-									</div>
-								</a>
-							</li>
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr hide-on-tablet">
-										OPTION
-									</div>
-								</a>
-							</li>
-						</ul>
-					</li>
+					
 				</ul>
 			</nav>
 		</div>
@@ -328,67 +296,67 @@
 					<div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--12-col-desktop">
 						<div class="full-width panel mdl-shadow--2dp">
 							<div class="full-width panel-tittle bg-primary text-center tittles">
-								New Product
+								Muevo productoi
 							</div>
 							<div class="full-width panel-content">
 								<form>
 									<div class="mdl-grid">
 										<div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--6-col-desktop">
-											<h5 class="text-condensedLight">Basic Information</h5>
+											<h5 class="text-condensedLight">Informacion basica</h5>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="number" pattern="-?[0-9- ]*(\.[0-9]+)?" id="BarCode">
-												<label class="mdl-textfield__label" for="BarCode">Barcode</label>
-												<span class="mdl-textfield__error">Invalid barcode</span>
+												<label class="mdl-textfield__label" for="BarCode">Codigo</label>
+												<span class="mdl-textfield__error">Codigo invalido</span>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-z0-9áéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="NameProduct">
-												<label class="mdl-textfield__label" for="NameProduct">Name</label>
-												<span class="mdl-textfield__error">Invalid name</span>
+												<label class="mdl-textfield__label" for="NameProduct">Nombre</label>
+												<span class="mdl-textfield__error">Nombre invalido</span>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield">
 												<select class="mdl-textfield__input">
-													<option value="" disabled="" selected="">Select category</option>
+													<option value="" disabled="" selected="">Seleccionar categoria</option>
 													<option value="">Category 1</option>
 													<option value="">Category 2</option>
 												</select>
 											</div>
-											<h5 class="text-condensedLight">Units and Price</h5>
+											<h5 class="text-condensedLight">UUnidades y precio</h5>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?" id="StrockProduct">
-												<label class="mdl-textfield__label" for="StrockProduct">Units</label>
-												<span class="mdl-textfield__error">Invalid number</span>
+												<label class="mdl-textfield__label" for="StrockProduct">Unidades</label>
+												<span class="mdl-textfield__error">Numero invalido</span>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" pattern="-?[0-9.]*(\.[0-9]+)?" id="PriceProduct">
-												<label class="mdl-textfield__label" for="PriceProduct">Price</label>
-												<span class="mdl-textfield__error">Invalid price</span>
+												<label class="mdl-textfield__label" for="PriceProduct">Precio</label>
+												<span class="mdl-textfield__error">Numero invalido</span>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?" id="discountProduct">
-												<label class="mdl-textfield__label" for="discountProduct">% Discount</label>
-												<span class="mdl-textfield__error">Invalid discount</span>
+												<label class="mdl-textfield__label" for="discountProduct">% Descuento</label>
+												<span class="mdl-textfield__error">Numero invalido</span>
 											</div>	
 										</div>
 										<div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--6-col-desktop">
-											<h5 class="text-condensedLight">Supplier data and model</h5>
+											<h5 class="text-condensedLight">Proveedor</h5>
 											<div class="mdl-textfield mdl-js-textfield">
 												<select class="mdl-textfield__input">
-													<option value="" disabled="" selected="">Select provider</option>
-													<option value="">Provider 1</option>
-													<option value="">Provider 2</option>
+													<option value="" disabled="" selected="">Selecciona proveedor</option>
+													<option value="">Proveedor 1</option>
+													<option value="">Proveedor 2</option>
 												</select>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text"  id="modelProduct">
-												<label class="mdl-textfield__label" for="modelProduct">Model</label>
-												<span class="mdl-textfield__error">Invalid model</span>
+												<label class="mdl-textfield__label" for="modelProduct">Modelo</label>
+												<span class="mdl-textfield__error">Modelo invalido</span>
 											</div>
 											<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 												<input class="mdl-textfield__input" type="text" id="markProduct">
-												<label class="mdl-textfield__label" for="markProduct">Mark</label>
-												<span class="mdl-textfield__error">Invalid Mark</span>
+												<label class="mdl-textfield__label" for="markProduct">Marca</label>
+												<span class="mdl-textfield__error">Marca invalida</span>
 											</div>
-											<h5 class="text-condensedLight">Other Data</h5>
+											<h5 class="text-condensedLight">Otro datos</h5>
 											<div class="mdl-textfield mdl-js-textfield">
 												<input type="date" class="mdl-textfield__input">
 											</div>
@@ -408,7 +376,7 @@
 										<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary" id="btn-addProduct">
 											<i class="zmdi zmdi-plus"></i>
 										</button>
-										<div class="mdl-tooltip" for="btn-addProduct">Add Product</div>
+										<div class="mdl-tooltip" for="btn-addProduct">Agregar producto</div>
 									</p>
 								</form>
 							</div>
@@ -430,14 +398,7 @@
 								</div>
 							</div>
 						</form>
-						<nav class="full-width menu-categories">
-							<ul class="list-unstyle text-center">
-								<li><a href="#!">Category 1</a></li>
-								<li><a href="#!">Category 2</a></li>
-								<li><a href="#!">Category 3</a></li>
-								<li><a href="#!">Category 4</a></li>
-							</ul>
-						</nav>
+						
 						<div class="full-width text-center" style="padding: 30px 0;">
 							<div class="mdl-card mdl-shadow--2dp full-width product-card">
 								<div class="mdl-card__title">
@@ -448,7 +409,7 @@
 									<small>Category</small>
 								</div>
 								<div class="mdl-card__actions mdl-card--border">
-									Product name
+									Product name 1
 									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 										<i class="zmdi zmdi-more"></i>
 									</button>
@@ -463,7 +424,7 @@
 									<small>Category</small>
 								</div>
 								<div class="mdl-card__actions mdl-card--border">
-									Product name
+									Product name 2
 									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 										<i class="zmdi zmdi-more"></i>
 									</button>
@@ -478,7 +439,7 @@
 									<small>Category</small>
 								</div>
 								<div class="mdl-card__actions mdl-card--border">
-									Product name
+									Product name 3
 									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 										<i class="zmdi zmdi-more"></i>
 									</button>
@@ -493,7 +454,37 @@
 									<small>Category</small>
 								</div>
 								<div class="mdl-card__actions mdl-card--border">
-									Product name
+									Product name 4
+									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+										<i class="zmdi zmdi-more"></i>
+									</button>
+								</div>
+							</div>
+							<div class="mdl-card mdl-shadow--2dp full-width product-card">
+								<div class="mdl-card__title">
+									<img src="assets/img/fontLogin.jpg" alt="product" class="img-responsive">
+								</div>
+								<div class="mdl-card__supporting-text">
+									<small>Stock</small><br>
+									<small>Category</small>
+								</div>
+								<div class="mdl-card__actions mdl-card--border">
+									Product name 5
+									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+										<i class="zmdi zmdi-more"></i>
+									</button>
+								</div>
+							</div>
+							<div class="mdl-card mdl-shadow--2dp full-width product-card">
+								<div class="mdl-card__title">
+									<img src="assets/img/fontLogin.jpg" alt="product" class="img-responsive">
+								</div>
+								<div class="mdl-card__supporting-text">
+									<small>Stock</small><br>
+									<small>Category</small>
+								</div>
+								<div class="mdl-card__actions mdl-card--border">
+									Product name 6
 									<button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
 										<i class="zmdi zmdi-more"></i>
 									</button>
