--- a/providers.html
+++ b/providers.html
@@ -22,18 +22,19 @@
 </head>
 <body>
 	<!-- Notifications area -->
+	<!-- Notifications area -->
 	<section class="full-width container-notifications">
 		<div class="full-width container-notifications-bg btn-Notification"></div>
 	    <section class="NotificationArea">
-	        <div class="full-width text-center NotificationArea-title tittles">Notifications <i class="zmdi zmdi-close btn-Notification"></i></div>
+	        <div class="full-width text-center NotificationArea-title tittles">Notificaciones <i class="zmdi zmdi-close btn-Notification"></i></div>
 	        <a href="#" class="Notification" id="notifation-unread-1">
 	            <div class="Notification-icon"><i class="zmdi zmdi-accounts-alt bg-info"></i></div>
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle"></i>
-	                    <strong>New User Registration</strong> 
+	                    <strong>Registrar un nuevo usuario</strong> 
 	                    <br>
-	                    <small>Just Now</small>
+	                    <small>Ahora mismo</small>
 	                </p>
 	            </div>
 	        	<div class="mdl-tooltip mdl-tooltip--left" for="notifation-unread-1">Notification as UnRead</div> 
@@ -43,9 +44,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>New Updates</strong> 
+	                    <strong>Historial</strong> 
 	                    <br>
-	                    <small>30 Mins Ago</small>
+	                    <small>ultimo mes</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-1">Notification as Read</div>
@@ -55,9 +56,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle"></i>
-	                    <strong>Archive uploaded</strong> 
+	                    <strong>Nuevo inventario agregado</strong> 
 	                    <br>
-	                    <small>31 Mins Ago</small>
+	                    <small>ultima semana</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-unread-2">Notification as UnRead</div>
@@ -67,9 +68,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>New Mail</strong> 
+	                    <strong>Solicitud nueva</strong> 
 	                    <br>
-	                    <small>37 Mins Ago</small>
+	                    <small>hace 37 min</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-2">Notification as Read</div>
@@ -79,9 +80,9 @@
 	            <div class="Notification-text">
 	                <p>
 	                    <i class="zmdi zmdi-circle-o"></i>
-	                    <strong>Folder delete</strong> 
+	                    <strong>Se elimino contenido</strong> 
 	                    <br>
-	                    <small>1 hours Ago</small>
+	                    <small>hace 2 días</small>
 	                </p>
 	            </div>
 	            <div class="mdl-tooltip mdl-tooltip--left" for="notifation-read-3">Notification as Read</div>
@@ -98,13 +99,13 @@
 					<li class="btn-Notification" id="notifications">
 						<i class="zmdi zmdi-notifications"></i>
 						<!-- <i class="zmdi zmdi-notifications-active btn-Notification" id="notifications"></i> -->
-						<div class="mdl-tooltip" for="notifications">Notifications</div>
+						<div class="mdl-tooltip" for="notifications">Notificaciones</div>
 					</li>
 					<li class="btn-exit" id="btn-exit">
 						<i class="zmdi zmdi-power"></i>
-						<div class="mdl-tooltip" for="btn-exit">LogOut</div>
+						<div class="mdl-tooltip" for="btn-exit">Cerrar sesión</div>
 					</li>
-					<li class="text-condensedLight noLink" ><small>User Name</small></li>
+					<li class="text-condensedLight noLink" ><small>Usuario</small></li>
 					<li class="noLink">
 						<figure>
 							<img src="assets/img/avatar-male.png" alt="Avatar" class="img-responsive">
@@ -119,7 +120,7 @@
 		<div class="full-width navLateral-bg btn-menu"></div>
 		<div class="full-width navLateral-body">
 			<div class="full-width navLateral-body-logo text-center tittles">
-				<i class="zmdi zmdi-close btn-menu"></i> Inventory 
+				<i class="zmdi zmdi-close btn-menu"></i>  Wine for us
 			</div>
 			<figure class="full-width" style="height: 77px;">
 				<div class="navLateral-body-cl">
@@ -127,13 +128,13 @@
 				</div>
 				<figcaption class="navLateral-body-cr hide-on-tablet">
 					<span>
-						Full Name Admin<br>
+						Administrador<br>
 						<small>Admin</small>
 					</span>
 				</figcaption>
 			</figure>
 			<div class="full-width tittles navLateral-body-tittle-menu">
-				<i class="zmdi zmdi-desktop-mac"></i><span class="hide-on-tablet">&nbsp; DASHBOARD</span>
+				<i class="zmdi zmdi-desktop-mac"></i><span class="hide-on-tablet">&nbsp; BIENVENIDO</span>
 			</div>
 			<nav class="full-width">
 				<ul class="full-width list-unstyle menu-principal">
@@ -154,7 +155,7 @@
 								<i class="zmdi zmdi-case"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								ADMINISTRATION
+								ADMINISTRACION
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -165,7 +166,7 @@
 										<i class="zmdi zmdi-balance"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										COMPANY
+										COMPAÑIA
 									</div>
 								</a>
 							</li>
@@ -175,7 +176,7 @@
 										<i class="zmdi zmdi-truck"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										PROVIDERS
+										PROVEEDORES
 									</div>
 								</a>
 							</li>
@@ -185,7 +186,7 @@
 										<i class="zmdi zmdi-card"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										PAYMENTS
+										PAGOS REALIZADOS
 									</div>
 								</a>
 							</li>
@@ -195,7 +196,7 @@
 										<i class="zmdi zmdi-label"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										CATEGORIES
+										CATEGORIAS
 									</div>
 								</a>
 							</li>
@@ -208,7 +209,7 @@
 								<i class="zmdi zmdi-face"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								USERS
+								USUARIOS
 							</div>
 							<span class="zmdi zmdi-chevron-left"></span>
 						</a>
@@ -219,7 +220,7 @@
 										<i class="zmdi zmdi-account"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										ADMINISTRATORS
+										ADMINISTRADOR
 									</div>
 								</a>
 							</li>
@@ -229,7 +230,7 @@
 										<i class="zmdi zmdi-accounts"></i>
 									</div>
 									<div class="navLateral-body-cr hide-on-tablet">
-										CLIENT
+										ENCARGADO
 									</div>
 								</a>
 							</li>
@@ -242,7 +243,7 @@
 								<i class="zmdi zmdi-washing-machine"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								PRODUCTS
+								PRODUCTOS
 							</div>
 						</a>
 					</li>
@@ -253,7 +254,7 @@
 								<i class="zmdi zmdi-shopping-cart"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								SALES
+								VENTAS REALIZADAS
 							</div>
 						</a>
 					</li>
@@ -264,44 +265,11 @@
 								<i class="zmdi zmdi-store"></i>
 							</div>
 							<div class="navLateral-body-cr hide-on-tablet">
-								INVENTORY
+								INVENTARIO
 							</div>
 						</a>
 					</li>
-					<li class="full-width divider-menu-h"></li>
-					<li class="full-width">
-						<a href="#!" class="full-width btn-subMenu">
-							<div class="navLateral-body-cl">
-								<i class="zmdi zmdi-wrench"></i>
-							</div>
-							<div class="navLateral-body-cr hide-on-tablet">
-								SETTINGS
-							</div>
-							<span class="zmdi zmdi-chevron-left"></span>
-						</a>
-						<ul class="full-width menu-principal sub-menu-options">
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr hide-on-tablet">
-										OPTION
-									</div>
-								</a>
-							</li>
-							<li class="full-width">
-								<a href="#!" class="full-width">
-									<div class="navLateral-body-cl">
-										<i class="zmdi zmdi-widgets"></i>
-									</div>
-									<div class="navLateral-body-cr hide-on-tablet">
-										OPTION
-									</div>
-								</a>
-							</li>
-						</ul>
-					</li>
+					
 				</ul>
 			</nav>
 		</div>
@@ -332,42 +300,42 @@
 							</div>
 							<div class="full-width panel-content">
 								<form>
-									<h5 class="text-condensedLight">Data provider</h5>
+									<h5 class="text-condensedLight">Datos de la compañia</h5>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?" id="DNIProvider">
-										<label class="mdl-textfield__label" for="DNIProvider">DNI</label>
-										<span class="mdl-textfield__error">Invalid number</span>
+										<input class="mdl-textfield__input" type="number" pattern="-?[0-9]*(\.[0-9]+)?" id="DNICompany">
+										<label class="mdl-textfield__label" for="DNICompany">DNI</label>
+										<span class="mdl-textfield__error">Numero invalido</span>
 									</div>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-z0-9 ]*(\.[0-9]+)?" id="NameProvider">
-										<label class="mdl-textfield__label" for="NameProvider">Name</label>
-										<span class="mdl-textfield__error">Invalid name</span>
+										<input class="mdl-textfield__input" type="text" pattern="-?[A-Za-z0-9áéíóúÁÉÍÓÚ ]*(\.[0-9]+)?" id="NameCompany">
+										<label class="mdl-textfield__label" for="NameCompany">Nombre</label>
+										<span class="mdl-textfield__error">Nombre invalido</span>
 									</div>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="text" id="addressProvider">
-										<label class="mdl-textfield__label" for="addressProvider">Address</label>
-										<span class="mdl-textfield__error">Invalid address</span>
+										<input class="mdl-textfield__input" type="text" id="addressCompany">
+										<label class="mdl-textfield__label" for="addressCompany">Dirección</label>
+										<span class="mdl-textfield__error">Dirección invalido</span>
 									</div>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="tel" pattern="-?[0-9+()- ]*(\.[0-9]+)?" id="phoneProvider">
-										<label class="mdl-textfield__label" for="phoneProvider">Phone</label>
-										<span class="mdl-textfield__error">Invalid phone number</span>
+										<input class="mdl-textfield__input" type="email" id="emailCompany">
+										<label class="mdl-textfield__label" for="emailCompany">E-mail</label>
+										<span class="mdl-textfield__error">E-mail invalido</span>
 									</div>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="email" id="emailProvider">
-										<label class="mdl-textfield__label" for="emailProvider">E-mail</label>
-										<span class="mdl-textfield__error">Invalid E-mail</span>
+										<input class="mdl-textfield__input" type="text" id="urlCompany">
+										<label class="mdl-textfield__label" for="urlCompany">Web</label>
+										<span class="mdl-textfield__error">web invalido</span>
 									</div>
 									<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-										<input class="mdl-textfield__input" type="text" id="webProvider">
-										<label class="mdl-textfield__label" for="webProvider">Web</label>
-										<span class="mdl-textfield__error">Invalid web address</span>
+										<input class="mdl-textfield__input" type="tel" pattern="-?[0-9+()- ]*(\.[0-9]+)?" id="phoneCompany">
+										<label class="mdl-textfield__label" for="phoneCompany">Telefono</label>
+										<span class="mdl-textfield__error">numero de telefono invalido</span>
 									</div>
 									<p class="text-center">
 										<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored bg-primary" id="btn-addProvider">
 											<i class="zmdi zmdi-plus"></i>
 										</button>
-										<div class="mdl-tooltip" for="btn-addProvider">Add provider</div>
+										<div class="mdl-tooltip" for="btn-addProvider">Agregar proveedor</div>
 									</p>
 								</form>
 							</div>
@@ -398,7 +366,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>1. Provider name</span>
+											<span>1. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -407,7 +375,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>2. Provider name</span>
+											<span>2. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -416,7 +384,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>3. Provider name</span>
+											<span>3. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -425,7 +393,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>4. Provider name</span>
+											<span>4. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -434,7 +402,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>5. Provider name</span>
+											<span>5. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -443,7 +411,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>6. Provider name</span>
+											<span>6. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
@@ -452,7 +420,7 @@
 									<div class="mdl-list__item mdl-list__item--two-line">
 										<span class="mdl-list__item-primary-content">
 											<i class="zmdi zmdi-truck mdl-list__item-avatar"></i>
-											<span>7. Provider name</span>
+											<span>7. Nombre del proveedor</span>
 											<span class="mdl-list__item-sub-title">DNI</span>
 										</span>
 										<a class="mdl-list__item-secondary-action" href="#!"><i class="zmdi zmdi-more"></i></a>
